# qartuli-c-da-malloc

./: CMakeLists.txt
dros-kalkulatori/: CMakeLists.txt  main.c
kanvasi/: CMakeLists.txt  kanavsi.c  kanvasi.c
qartuli-c/: CMakeLists.txt  dro.c  dro.h  matematika.c  matematika.h  qartuli.c  qartuli.h  stdbiblioteka.h  stdsheyvana.c  stdsheyvana.h  striqoni.h
